--- a/html/a.html
+++ b/html/a.html
@@ -24,41 +24,88 @@
 </div>
 
 <div id="container" style="width:1024px; min-width: 310px; height: 400px; margin: 0 auto"></div>
-<pre id="csv" style="display:none">Apples,Pears,Oranges,Bananas,Plums
-John,8,4,6,5
-Jane,3,4,2,3
-Joe,16,26,29,17
-Janet,3,16,13,15
+<pre id="csv" style="display:none">
+"Benchmark","Mode","Threads","Samples","Score","Score Error (99.9%)","Unit"
+"org.mauritania.minibenchmark.catalog.BoxingUnboxing.noBoxing","thrpt",1,10,10125.278114,1166.348288,"ops/s"
+"org.mauritania.minibenchmark.catalog.BoxingUnboxing.withBoxing","thrpt",1,10,14195.787993,2063.080451,"ops/s"
+"org.mauritania.minibenchmark.catalog.CollectionConcatenation.concatenateOnArray","thrpt",1,10,51.353513,5.586272,"ops/s"
+"org.mauritania.minibenchmark.catalog.CollectionConcatenation.concatenateOnList","thrpt",1,10,3.502296,0.188876,"ops/s"
+"org.mauritania.minibenchmark.catalog.CollectionPatternMatching.patternMatchOnList","thrpt",1,10,34554496.095092,2779877.285984,"ops/s"
+"org.mauritania.minibenchmark.catalog.CollectionPatternMatching.patternMatchingOnVector","thrpt",1,10,383050.659754,53811.550486,"ops/s"
+"org.mauritania.minibenchmark.catalog.CollectionRandomAccess.randomAccessOnArray","thrpt",1,10,105364434.242691,11237004.778720,"ops/s"
+"org.mauritania.minibenchmark.catalog.CollectionRandomAccess.randomAccessOnList","thrpt",1,10,16996662.490313,9246239.949011,"ops/s"
+"org.mauritania.minibenchmark.catalog.CollectionRandomAccess.randomAccessOnVector","thrpt",1,10,53924385.772230,20890913.517482,"ops/s"
+"org.mauritania.minibenchmark.catalog.Identity.identity","thrpt",1,10,36239.354387,6002.463548,"ops/s"
+"org.mauritania.minibenchmark.catalog.Identity.identityBy2","thrpt",1,10,19700.677517,5478.818587,"ops/s"
+"org.mauritania.minibenchmark.catalog.Identity.identityBy4","thrpt",1,10,43148.430906,8414.083340,"ops/s"
+"org.mauritania.minibenchmark.catalog.Identity.identitySame","thrpt",1,10,14203.000824,10190.689600,"ops/s"
+"org.mauritania.minibenchmark.catalog.PartialFunctions.filterAndMap","thrpt",1,10,39818.561134,22901.830109,"ops/s"
+"org.mauritania.minibenchmark.catalog.PartialFunctions.partialFunction","thrpt",1,10,33709.318561,5409.354932,"ops/s"
+"org.mauritania.minibenchmark.catalog.SeqVsListSum.sumOnList","thrpt",1,10,5052047.770607,322762.451612,"ops/s"
+"org.mauritania.minibenchmark.catalog.SeqVsListSum.sumOnSeq","thrpt",1,10,4868726.602004,389667.481504,"ops/s"
+"org.mauritania.minibenchmark.catalog.TailRecursive.headRecursion","thrpt",1,10,11941.635481,1118.838599,"ops/s"
+"org.mauritania.minibenchmark.catalog.TailRecursive.tailRecursion","thrpt",1,10,22552.821054,6500.775707,"ops/s"
 </pre>
 <script type="text/javascript">
-	$(function () {
-		$('#container').highcharts({
-				chart: {
-					type: 'column'
-				},
 
-			title: {
-				text: 'Fruit Consumtion'
-			},
+var options = {
+    chart: {
+        renderTo: 'container',
+        defaultSeriesType: 'column'
+    },
+    title: {
+        text: 'Fruit Consumption'
+    },
+    xAxis: {
+        categories: []
+    },
+    yAxis: {
+        title: {
+            text: 'Units'
+        }
+    },
+    series: []
+};
 
-			subtitle: {
-				text: 'Data input from CSV'
-			},
+    $.get('data.csv', function(data) {
+    // Split the lines
+    var lines = data.split('\n');
 
-			data: {
-				csv: document.getElementById('csv').innerHTML
-			},
+    // Iterate over the lines and add categories or series
+    $.each(lines, function(lineNo, line) {
+        var items = line.split(',');
 
-			plotOptions: {
-				series: {
-					marker: {
-						enabled: false
-					}
-				}
-			},
-			series:[]
-		});
-	});
+        // header line containes categories
+        if (lineNo == 0) {
+            $.each(items, function(itemNo, item) {
+                console.log('line: ' + line)
+                if (itemNo > 0) options.xAxis.categories.push(item);
+            });
+        }
+
+        // the rest of the lines contain data with their name in the first
+        // position
+        else {
+            var series = {
+                data: []
+            };
+            $.each(items, function(itemNo, item) {
+                if (itemNo == 0) {
+                    series.name = item;
+                } else {
+                    series.data.push(parseFloat(item));
+                }
+            });
+
+            options.series.push(series);
+
+        }
+
+    });
+
+    // Create the chart
+    var chart = new Highcharts.Chart(options);
+    });
 </script>
 </body>
 </html>
