Generate a report html for each suite

--- a/report/template.html
+++ b/report/template.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Highcharts Data from innerHTML of hidden div</title>
+    <title>TO_REPLACE_TITLE</title>
     <style>
         body{
         margin-top: 30px;
@@ -31,7 +31,7 @@ var options = {
         defaultSeriesType: 'column'
     },
     title: {
-        text: 'Fruit Consumption'
+        text: 'TO_REPLACE_TITLE'
     },
     xAxis: {
         categories: []
@@ -44,7 +44,7 @@ var options = {
     series: []
 };
 
-$.get('data1.csv', function(data) {
+$.get('TO_REPLACE_CSV', function(data) {
     var lines = data.split('\n');
 
     // Iterate over the lines and add categories or series
