Minor cosmetic changes

--- a/report/template.html
+++ b/report/template.html
@@ -19,7 +19,7 @@
 </head>
 <body>
 <div style="width: 800px; margin: 2em auto; padding: 1em; border: 1px solid red; border-radius: 0.5em">
-    Highcharts data load from a csv stored inline in a hidden div
+    Unit: ops/s
 </div>
 
 <div id="container" style="width:1024px; min-width: 310px; height: 400px; margin: 0 auto"></div>
