Load units in curves

--- a/report/header.html
+++ b/report/header.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>TO_REPLACE_TITLE</title>
+    <title>Scala Benchmarking</title>
     <style>
         body{
         margin-top: 30px;
@@ -18,7 +18,5 @@
     <script src="http://code.highcharts.com/modules/exporting.js"></script>
 </head>
 <body>
-<div style="width: 800px; margin: 2em auto; padding: 1em; border: 1px solid red; border-radius: 0.5em">
-    Unit: ops/s
-</div>
+<h1>Scala Benchmarking</h1>
 
