--- a/report/script.html
+++ b/report/script.html
@@ -11,7 +11,7 @@ var TO_REPLACE_CHART_IDOptions = {
     },
     yAxis: {
         title: {
-            text: 'Units'
+            text: 'TO_REPLACE_UNITS'
         }
     },
     series: []
