--- a/report/header.html
+++ b/report/header.html
@@ -1,4 +1,40 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
+# README
+
+This project aims to provide an empirical demonstration of the performance difference of similar (but not equal) algorithms.
+
+It uses JMH under the hood for micro benchmarking.
+
+## Execution
+
+To execute the benchmarks using SBT just do:
+
+```
+sbt clean "jmh:run -help"
+sbt clean "jmh:run -i 3 -wi 3 -f1 -t1 .*Identity.*"
+```
+
+## Reporting
+
+Launch the reports generation script as follows:
+
+```
+cd report
+bash generate-reports.bash
+```
+
+Also you may want to have a jenkins Job to generate regular reports on the performance of bencharmked functions. I recommend [jmh-jenkins](https://github.com/blackboard/jmh-jenkins) with a job like this one:
+
+```
+sbt -Dsbt.log.noformat=true clean "jmh:run -rff report/input/output.csv  -i 10 -wi 10 -f1 -t1 .*"
+
+```
+
+# Findings from the catalog
+
+The catalog with all Scala algorithms being benchmarked is [here](src/main/scala/org/mauritania/minibenchmark/catalog).
+
+You can easily add yours by forking the project.
+
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
