--- a/report/header.html
+++ b/report/header.html
@@ -4,41 +4,16 @@ This project aims to provide an empirical demonstration of the performance diffe
 
 It uses JMH under the hood for micro benchmarking.
 
-## Execution
-
-To execute the benchmarks using SBT just do:
-
-```
-sbt clean "jmh:run -help"
-sbt clean "jmh:run -i 3 -wi 3 -f1 -t1 .*Identity.*"
-```
-
-## Reporting
-
-Launch the reports generation script as follows:
-
-```
-cd report
-bash generate-reports.bash
-```
-
-Also you may want to have a jenkins Job to generate regular reports on the performance of bencharmked functions. I recommend [jmh-jenkins](https://github.com/blackboard/jmh-jenkins) with a job like this one:
-
-```
-sbt -Dsbt.log.noformat=true clean "jmh:run -rff report/input/output.csv  -i 10 -wi 10 -f1 -t1 .*"
-
-```
-
 # Findings from the catalog
 
-The catalog with all Scala algorithms being benchmarked is [here](src/main/scala/org/mauritania/minibenchmark/catalog).
+The catalog with all Scala algorithms being benchmarked is [here](https://github.com/mauriciojost/scala-ubenchmark/tree/master/src/main/scala/org/mauritania/minibenchmark/catalog).
 
 You can easily add yours by forking the project.
 
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Scala Benchmarking</title>
+    <title>Scala Micro Benchmarking</title>
     <style>
         body{
         margin-top: 30px;
@@ -54,5 +29,5 @@ You can easily add yours by forking the project.
     <script src="http://code.highcharts.com/modules/exporting.js"></script>
 </head>
 <body>
-<h1>Scala Benchmarking</h1>
+<h1>Scala Micro Benchmarking</h1>
 
