--- a/report/header.html
+++ b/report/header.html
@@ -4,6 +4,10 @@ This project aims to provide an empirical demonstration of the performance diffe
 
 It uses JMH under the hood for micro benchmarking.
 
+[![BLOG](https://img.shields.io/badge/goto-webpage-333399.svg)](https://mauriciojost.github.io/scala-ubenchmark/)
+
+[![GITHUB](https://img.shields.io/badge/goto-github-333399.svg)](https://github.com/mauriciojost/scala-ubenchmark/)
+
 # Findings from the catalog
 
 The catalog with all Scala algorithms being benchmarked is [here](https://github.com/mauriciojost/scala-ubenchmark/tree/master/src/main/scala/org/mauritania/minibenchmark/catalog).
