Improve index.html to read csv

--- a/index.html
+++ b/index.html
@@ -18,23 +18,16 @@
 </head>
 <body>
 <h1>Scala Micro Benchmarking</h1>
-
-<div id="orgmauritaniaminibenchmarkcatalogCollectionConcatenationcontainer" style="width:1024px; min-width: 310px; height: 400px; margin: 0 auto"></div>
-<div id="orgmauritaniaminibenchmarkcatalogCollectionPatternMatchingcontainer" style="width:1024px; min-width: 310px; height: 400px; margin: 0 auto"></div>
-<div id="orgmauritaniaminibenchmarkcatalogCollectionRandomAccesscontainer" style="width:1024px; min-width: 310px; height: 400px; margin: 0 auto"></div>
-<div id="orgmauritaniaminibenchmarkcatalogIdentitycontainer" style="width:1024px; min-width: 310px; height: 400px; margin: 0 auto"></div>
-<div id="orgmauritaniaminibenchmarkcatalogIdentityTrickycontainer" style="width:1024px; min-width: 310px; height: 400px; margin: 0 auto"></div>
-<div id="orgmauritaniaminibenchmarkcatalogPartialFunctionscontainer" style="width:1024px; min-width: 310px; height: 400px; margin: 0 auto"></div>
-<div id="orgmauritaniaminibenchmarkcatalogSeqVsListSumcontainer" style="width:1024px; min-width: 310px; height: 400px; margin: 0 auto"></div>
-<div id="orgmauritaniaminibenchmarkcatalogTailRecursivecontainer" style="width:1024px; min-width: 310px; height: 400px; margin: 0 auto"></div>
+<div id="container" style="width:1024px; min-width: 310px; height: 400px; margin: 0 auto"></div>
 <script type="text/javascript">
-var orgmauritaniaminibenchmarkcatalogCollectionConcatenationOptions = {
+
+var options = {
     chart: {
-        renderTo: 'orgmauritaniaminibenchmarkcatalogCollectionConcatenationcontainer',
+        renderTo: 'container',
         defaultSeriesType: 'column'
     },
     title: {
-        text: 'org.mauritania.minibenchmark.catalog.CollectionConcatenation'
+        text: 'General'
     },
     xAxis: {
         categories: []
@@ -47,8 +40,22 @@ var orgmauritaniaminibenchmarkcatalogCollectionConcatenationOptions = {
     series: []
 };
 
-$.get('report/output/org.mauritania.minibenchmark.catalog.CollectionConcatenation.csv', function(data) {
-    var lines = data.split('\n');
+function isEligibleKeyColumn(itemNo) {
+    return (itemNo == 0)
+}
+
+function isEligibleDataColumn(itemNo) {
+    return (itemNo == 4 || itemNo == 5)
+}
+
+// method, score, score error
+// c1.m1, 10, 1
+// c1.m2, 11, 1
+// c2.m1, 21, 1
+// c2.m2, 23, 1
+
+$.get('report/input/raw.csv', function(data) {
+    var lines = data.replace('"', '').split('\n');
 
     // Iterate over the lines and add categories or series
     $.each(lines, function(lineNo, line) {
@@ -58,7 +65,9 @@ $.get('report/output/org.mauritania.minibenchmark.catalog.CollectionConcatenatio
         if (lineNo == 0) {
             $.each(items, function(itemNo, item) {
                 console.log('Pushing category: ' + item)
-                if (itemNo > 0) orgmauritaniaminibenchmarkcatalogCollectionConcatenationOptions.xAxis.categories.push(item);
+                if (isEligibleKeyColumn(itemNo) || isEligibleDataColumn(itemNo)) {
+                    options.xAxis.categories.push(item);
+                }
             });
         } else {
             // the rest of the lines contain data with their name in the first
@@ -67,430 +76,23 @@ $.get('report/output/org.mauritania.minibenchmark.catalog.CollectionConcatenatio
                 data: []
             };
             $.each(items, function(itemNo, item) {
-                if (itemNo == 0) {
+                if (isEligibleKeyColumn(itemNo)) {
                     series.name = item;
                     console.log('Pushing item category: ' + item)
-                } else {
+                } else if (isEligibleDataColumn(itemNo)) {
                     series.data.push(parseFloat(item));
                     console.log('Pushing item value: ' + item)
                 }
             });
             if (series.data.length != 0) {
-                orgmauritaniaminibenchmarkcatalogCollectionConcatenationOptions.series.push(series);
+                options.series.push(series);
             }
         }
     });
     // Create the chart
-    var chart = new Highcharts.Chart(orgmauritaniaminibenchmarkcatalogCollectionConcatenationOptions);
+    var chart = new Highcharts.Chart(options);
 
 });
-
-
-var orgmauritaniaminibenchmarkcatalogCollectionPatternMatchingOptions = {
-    chart: {
-        renderTo: 'orgmauritaniaminibenchmarkcatalogCollectionPatternMatchingcontainer',
-        defaultSeriesType: 'column'
-    },
-    title: {
-        text: 'org.mauritania.minibenchmark.catalog.CollectionPatternMatching'
-    },
-    xAxis: {
-        categories: []
-    },
-    yAxis: {
-        title: {
-            text: 'ops per s'
-        }
-    },
-    series: []
-};
-
-$.get('report/output/org.mauritania.minibenchmark.catalog.CollectionPatternMatching.csv', function(data) {
-    var lines = data.split('\n');
-
-    // Iterate over the lines and add categories or series
-    $.each(lines, function(lineNo, line) {
-        console.log('Parsing line: ' + line)
-        var items = line.split(',');
-        // header line contains categories
-        if (lineNo == 0) {
-            $.each(items, function(itemNo, item) {
-                console.log('Pushing category: ' + item)
-                if (itemNo > 0) orgmauritaniaminibenchmarkcatalogCollectionPatternMatchingOptions.xAxis.categories.push(item);
-            });
-        } else {
-            // the rest of the lines contain data with their name in the first
-            // position
-            var series = {
-                data: []
-            };
-            $.each(items, function(itemNo, item) {
-                if (itemNo == 0) {
-                    series.name = item;
-                    console.log('Pushing item category: ' + item)
-                } else {
-                    series.data.push(parseFloat(item));
-                    console.log('Pushing item value: ' + item)
-                }
-            });
-            if (series.data.length != 0) {
-                orgmauritaniaminibenchmarkcatalogCollectionPatternMatchingOptions.series.push(series);
-            }
-        }
-    });
-    // Create the chart
-    var chart = new Highcharts.Chart(orgmauritaniaminibenchmarkcatalogCollectionPatternMatchingOptions);
-
-});
-
-
-var orgmauritaniaminibenchmarkcatalogCollectionRandomAccessOptions = {
-    chart: {
-        renderTo: 'orgmauritaniaminibenchmarkcatalogCollectionRandomAccesscontainer',
-        defaultSeriesType: 'column'
-    },
-    title: {
-        text: 'org.mauritania.minibenchmark.catalog.CollectionRandomAccess'
-    },
-    xAxis: {
-        categories: []
-    },
-    yAxis: {
-        title: {
-            text: 'ops per s'
-        }
-    },
-    series: []
-};
-
-$.get('report/output/org.mauritania.minibenchmark.catalog.CollectionRandomAccess.csv', function(data) {
-    var lines = data.split('\n');
-
-    // Iterate over the lines and add categories or series
-    $.each(lines, function(lineNo, line) {
-        console.log('Parsing line: ' + line)
-        var items = line.split(',');
-        // header line contains categories
-        if (lineNo == 0) {
-            $.each(items, function(itemNo, item) {
-                console.log('Pushing category: ' + item)
-                if (itemNo > 0) orgmauritaniaminibenchmarkcatalogCollectionRandomAccessOptions.xAxis.categories.push(item);
-            });
-        } else {
-            // the rest of the lines contain data with their name in the first
-            // position
-            var series = {
-                data: []
-            };
-            $.each(items, function(itemNo, item) {
-                if (itemNo == 0) {
-                    series.name = item;
-                    console.log('Pushing item category: ' + item)
-                } else {
-                    series.data.push(parseFloat(item));
-                    console.log('Pushing item value: ' + item)
-                }
-            });
-            if (series.data.length != 0) {
-                orgmauritaniaminibenchmarkcatalogCollectionRandomAccessOptions.series.push(series);
-            }
-        }
-    });
-    // Create the chart
-    var chart = new Highcharts.Chart(orgmauritaniaminibenchmarkcatalogCollectionRandomAccessOptions);
-
-});
-
-
-var orgmauritaniaminibenchmarkcatalogIdentityOptions = {
-    chart: {
-        renderTo: 'orgmauritaniaminibenchmarkcatalogIdentitycontainer',
-        defaultSeriesType: 'column'
-    },
-    title: {
-        text: 'org.mauritania.minibenchmark.catalog.Identity'
-    },
-    xAxis: {
-        categories: []
-    },
-    yAxis: {
-        title: {
-            text: 'ops per s'
-        }
-    },
-    series: []
-};
-
-$.get('report/output/org.mauritania.minibenchmark.catalog.Identity.csv', function(data) {
-    var lines = data.split('\n');
-
-    // Iterate over the lines and add categories or series
-    $.each(lines, function(lineNo, line) {
-        console.log('Parsing line: ' + line)
-        var items = line.split(',');
-        // header line contains categories
-        if (lineNo == 0) {
-            $.each(items, function(itemNo, item) {
-                console.log('Pushing category: ' + item)
-                if (itemNo > 0) orgmauritaniaminibenchmarkcatalogIdentityOptions.xAxis.categories.push(item);
-            });
-        } else {
-            // the rest of the lines contain data with their name in the first
-            // position
-            var series = {
-                data: []
-            };
-            $.each(items, function(itemNo, item) {
-                if (itemNo == 0) {
-                    series.name = item;
-                    console.log('Pushing item category: ' + item)
-                } else {
-                    series.data.push(parseFloat(item));
-                    console.log('Pushing item value: ' + item)
-                }
-            });
-            if (series.data.length != 0) {
-                orgmauritaniaminibenchmarkcatalogIdentityOptions.series.push(series);
-            }
-        }
-    });
-    // Create the chart
-    var chart = new Highcharts.Chart(orgmauritaniaminibenchmarkcatalogIdentityOptions);
-
-});
-
-
-var orgmauritaniaminibenchmarkcatalogIdentityTrickyOptions = {
-    chart: {
-        renderTo: 'orgmauritaniaminibenchmarkcatalogIdentityTrickycontainer',
-        defaultSeriesType: 'column'
-    },
-    title: {
-        text: 'org.mauritania.minibenchmark.catalog.IdentityTricky'
-    },
-    xAxis: {
-        categories: []
-    },
-    yAxis: {
-        title: {
-            text: 'ops per s'
-        }
-    },
-    series: []
-};
-
-$.get('report/output/org.mauritania.minibenchmark.catalog.IdentityTricky.csv', function(data) {
-    var lines = data.split('\n');
-
-    // Iterate over the lines and add categories or series
-    $.each(lines, function(lineNo, line) {
-        console.log('Parsing line: ' + line)
-        var items = line.split(',');
-        // header line contains categories
-        if (lineNo == 0) {
-            $.each(items, function(itemNo, item) {
-                console.log('Pushing category: ' + item)
-                if (itemNo > 0) orgmauritaniaminibenchmarkcatalogIdentityTrickyOptions.xAxis.categories.push(item);
-            });
-        } else {
-            // the rest of the lines contain data with their name in the first
-            // position
-            var series = {
-                data: []
-            };
-            $.each(items, function(itemNo, item) {
-                if (itemNo == 0) {
-                    series.name = item;
-                    console.log('Pushing item category: ' + item)
-                } else {
-                    series.data.push(parseFloat(item));
-                    console.log('Pushing item value: ' + item)
-                }
-            });
-            if (series.data.length != 0) {
-                orgmauritaniaminibenchmarkcatalogIdentityTrickyOptions.series.push(series);
-            }
-        }
-    });
-    // Create the chart
-    var chart = new Highcharts.Chart(orgmauritaniaminibenchmarkcatalogIdentityTrickyOptions);
-
-});
-
-
-var orgmauritaniaminibenchmarkcatalogPartialFunctionsOptions = {
-    chart: {
-        renderTo: 'orgmauritaniaminibenchmarkcatalogPartialFunctionscontainer',
-        defaultSeriesType: 'column'
-    },
-    title: {
-        text: 'org.mauritania.minibenchmark.catalog.PartialFunctions'
-    },
-    xAxis: {
-        categories: []
-    },
-    yAxis: {
-        title: {
-            text: 'ops per s'
-        }
-    },
-    series: []
-};
-
-$.get('report/output/org.mauritania.minibenchmark.catalog.PartialFunctions.csv', function(data) {
-    var lines = data.split('\n');
-
-    // Iterate over the lines and add categories or series
-    $.each(lines, function(lineNo, line) {
-        console.log('Parsing line: ' + line)
-        var items = line.split(',');
-        // header line contains categories
-        if (lineNo == 0) {
-            $.each(items, function(itemNo, item) {
-                console.log('Pushing category: ' + item)
-                if (itemNo > 0) orgmauritaniaminibenchmarkcatalogPartialFunctionsOptions.xAxis.categories.push(item);
-            });
-        } else {
-            // the rest of the lines contain data with their name in the first
-            // position
-            var series = {
-                data: []
-            };
-            $.each(items, function(itemNo, item) {
-                if (itemNo == 0) {
-                    series.name = item;
-                    console.log('Pushing item category: ' + item)
-                } else {
-                    series.data.push(parseFloat(item));
-                    console.log('Pushing item value: ' + item)
-                }
-            });
-            if (series.data.length != 0) {
-                orgmauritaniaminibenchmarkcatalogPartialFunctionsOptions.series.push(series);
-            }
-        }
-    });
-    // Create the chart
-    var chart = new Highcharts.Chart(orgmauritaniaminibenchmarkcatalogPartialFunctionsOptions);
-
-});
-
-
-var orgmauritaniaminibenchmarkcatalogSeqVsListSumOptions = {
-    chart: {
-        renderTo: 'orgmauritaniaminibenchmarkcatalogSeqVsListSumcontainer',
-        defaultSeriesType: 'column'
-    },
-    title: {
-        text: 'org.mauritania.minibenchmark.catalog.SeqVsListSum'
-    },
-    xAxis: {
-        categories: []
-    },
-    yAxis: {
-        title: {
-            text: 'ops per s'
-        }
-    },
-    series: []
-};
-
-$.get('report/output/org.mauritania.minibenchmark.catalog.SeqVsListSum.csv', function(data) {
-    var lines = data.split('\n');
-
-    // Iterate over the lines and add categories or series
-    $.each(lines, function(lineNo, line) {
-        console.log('Parsing line: ' + line)
-        var items = line.split(',');
-        // header line contains categories
-        if (lineNo == 0) {
-            $.each(items, function(itemNo, item) {
-                console.log('Pushing category: ' + item)
-                if (itemNo > 0) orgmauritaniaminibenchmarkcatalogSeqVsListSumOptions.xAxis.categories.push(item);
-            });
-        } else {
-            // the rest of the lines contain data with their name in the first
-            // position
-            var series = {
-                data: []
-            };
-            $.each(items, function(itemNo, item) {
-                if (itemNo == 0) {
-                    series.name = item;
-                    console.log('Pushing item category: ' + item)
-                } else {
-                    series.data.push(parseFloat(item));
-                    console.log('Pushing item value: ' + item)
-                }
-            });
-            if (series.data.length != 0) {
-                orgmauritaniaminibenchmarkcatalogSeqVsListSumOptions.series.push(series);
-            }
-        }
-    });
-    // Create the chart
-    var chart = new Highcharts.Chart(orgmauritaniaminibenchmarkcatalogSeqVsListSumOptions);
-
-});
-
-
-var orgmauritaniaminibenchmarkcatalogTailRecursiveOptions = {
-    chart: {
-        renderTo: 'orgmauritaniaminibenchmarkcatalogTailRecursivecontainer',
-        defaultSeriesType: 'column'
-    },
-    title: {
-        text: 'org.mauritania.minibenchmark.catalog.TailRecursive'
-    },
-    xAxis: {
-        categories: []
-    },
-    yAxis: {
-        title: {
-            text: 'ops per s'
-        }
-    },
-    series: []
-};
-
-$.get('report/output/org.mauritania.minibenchmark.catalog.TailRecursive.csv', function(data) {
-    var lines = data.split('\n');
-
-    // Iterate over the lines and add categories or series
-    $.each(lines, function(lineNo, line) {
-        console.log('Parsing line: ' + line)
-        var items = line.split(',');
-        // header line contains categories
-        if (lineNo == 0) {
-            $.each(items, function(itemNo, item) {
-                console.log('Pushing category: ' + item)
-                if (itemNo > 0) orgmauritaniaminibenchmarkcatalogTailRecursiveOptions.xAxis.categories.push(item);
-            });
-        } else {
-            // the rest of the lines contain data with their name in the first
-            // position
-            var series = {
-                data: []
-            };
-            $.each(items, function(itemNo, item) {
-                if (itemNo == 0) {
-                    series.name = item;
-                    console.log('Pushing item category: ' + item)
-                } else {
-                    series.data.push(parseFloat(item));
-                    console.log('Pushing item value: ' + item)
-                }
-            });
-            if (series.data.length != 0) {
-                orgmauritaniaminibenchmarkcatalogTailRecursiveOptions.series.push(series);
-            }
-        }
-    });
-    // Create the chart
-    var chart = new Highcharts.Chart(orgmauritaniaminibenchmarkcatalogTailRecursiveOptions);
-
-});
-
 
 </script>
 </body>
