Add *Report* in index.html

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Scala Benchmarking</title>
+    <title>Scala Benchmarking Report</title>
     <style>
         body{
         margin-top: 30px;
@@ -17,7 +17,7 @@
     <script src="https://code.highcharts.com/modules/exporting.js"></script>
 </head>
 <body>
-<h1>Scala Benchmarking</h1>
+<h1>Scala Benchmarking Report</h1>
 <script type="text/javascript">
 
 function getClass(met) { return met.replace('.' + getMethod(met), '') }
